# provider-ai

provider-ai-main/: Dockerfile  README.md  pyproject.toml
provider-ai-main/agent/: inbound_call.py  langgraph_llm.py  langgraph_tool.py  outbound_caller_agent.py
provider-ai-main/notebooks/: testing.ipynb
provider-ai-main/sip_trunk/: dispatch-rule.json  inbound-trunk.json  outbound-trunk.json
provider-ai-main/store_schedule/: app.py
provider-ai-main/store_schedule/public/: index.html
provider-ai-main/stt_tts/: text_to_speech.py
